# sdl-base

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md  yarl.sln
src/: BasicTypes.h  Color.h  main.cpp
src/sdl/: SDLException.h  SDLRect.h  SDLRenderer.cpp  SDLRenderer.h  SDLSurface.cpp  SDLSurface.h  SDLTexture.h  SDLWrapper.cpp  SDLWrapper.h
src/utils/: FPS.h  PngLoader.cpp  PngLoader.h  TextRenderer.h
src/yarl/: Imp.cpp  ImpRenderer.cpp  ImpRenderer.h  Map.h  Yarl.cpp  Yarl.h
yarl/: BasicTypes.h  Color.h  Entity.h  FPS.cpp  FPS.h  Imp.cpp  Imp.h  ImpRenderer.cpp  ImpRenderer.h  Map.cpp  Map.h  MapRenderer.cpp  MapRenderer.h  PngLoader.cpp  SDLRect.h  SDLRenderer.cpp  SDLRenderer.h  SDLSurface.cpp  SDLSurface.h  SDLTexture.cpp  SDLWrapper.cpp  SDLWrapper.h  TextRenderer.cpp  TextRenderer.h  TextureSurface.h  main.cpp  yarl.vcxproj  yarl.vcxproj.filters
